glhf gamers
let Sirc know if you experience any game freezes or crashes