@@ -1,2 +1,3 @@
-# Tomafia_Modpack_Updater
- 
+version https://git-lfs.github.com/spec/v1
+oid sha256:deb5d100603fc5b91c16a47966b8df170da89a57bec43703f9e3a4aa8d94732b
+size 28
