@@ -1,7 +1,3 @@
-{
-  "schemaVersion": 1,
-  "hotfixesFormat": null,
-  "versions": [
- 
-  ]
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:44ef83d8dd768976e529da68bb1c492d9dbf2a31345254f18c4370b2eafe599a
+size 73
