@@ -1,13 +1,3 @@
-<?php
-echo "Here are our files";
-$path = ".";
-$dh = opendir($path);
-$i=1;
-while (($file = readdir($dh)) !== false) {
-    if($file != "." && $file != ".." && $file != "index.php" && $file != ".htaccess" && $file != "error_log" && $file != "cgi-bin") {
-        echo "<a href='$path/$file'>$file</a><br /><br />";
-        $i++;
-    }
-}
-closedir($dh);
-?> 
+version https://git-lfs.github.com/spec/v1
+oid sha256:2322756b852f5d01b3469c486e8ff880b106e956580df48c3c6177b3b320c035
+size 351
